# SDL_ACCEL_Build

./: CMakeLists.txt  README.md
src/: Camera.h  Hit.h  Light.h  Materials.h  Object.h  Quaternion.h  Scene.h  Settings.h  Sun.h  Tracer.h  Vector.h  main.c
src2/: Camera.h  Hit.h  Light.h  Materials.h  Object.h  Quaternion.h  Ray.h  Scene.h  Settings.h  Sun.h  Tracer.h  Vector.h  main.c
src3/: Camera.h  Hit.h  Light.h  Materials.h  Object.h  Ray.h  Scene.h  Settings.h  Sun.h  Tracer.h  main.c
src4/: Camera.h  Hit.h  InputHandler.h  Light.h  Materials.h  Object.h  Ray.h  Scene.h  Settings.h  Sun.h  Tracer.h  main.c
